Mini SQL Query Change Log
=========================

2009-08-26	FIX: Improved handling of db objects with 'unfriendly names' (e.g. spaces etc).
2009-08-26	ENH: Added simple template processing, access to properties of IApplicationServices using braces.
2009-08-21	ENH: Major breaking changes around the collection of the database schemas (See Core.DbModel).
2009-08-21	ENH: Added support for SQL CE 3.5 databases.
2009-07-08	ENH: Added views to the DB Inspector plugin - added "Tables" and "Views" nodes at the root.
2009-07-07	ENH: Pushed the query execution into background worker.
2009-07-06	ENH: Added the messages pane to the results, started to add providers (these are provider specific, just 'generic' and SqlClient for now).
2009-07-01	ENH: Updated the dock panel suite.
2009-07-01	ENH: Added better credits to the About Form.
2009-06-30	ENH: addded "is dirty" checks to the connection string editor form
2009-06-29	ENH: Added query batching using "GO" keyword (made IQueryEditor.DataSet obsolete)
2009-06-24	ENH: Updated the Text Editor to v3 (also load definition by file now, see 'SQL-Mode.xshd')
2009-06-10	TASK[4126]: Modified connections to use XML rather than text files (breaking change)
2009-06-04	FIX: handle SQL object names with spaces etc "My Col" -> "[My Col]"
2009-05-06	FIX[4030]: for "BUG: CSV Export plugin does not escape certain characters"


Version 0.9.9.1 - 14 June 2008 - Preview Release
------------------------------------------------
Preview release prior to version 1.0.
	* Modified app to use Castle Windsor for dependency injection (finally!)
	* General refactoring around core interfaces
	* Added allot of hopefully useful commenting
	* Implemented simple text searching abilities
	* Added a "search tools" plugin under the SDK as an example and find implementation.
	* Enhanced the connection strings editor to make use of the providers connection string builder.


Version 0.9.9.0 - 23 May 2008 - Final
 Beta

------------------------------------------