@@ -1,8 +1,9 @@
-IF OBJECT_ID('TABLE_NAME', 'U') IS NOT NULL
-  DROP TABLE TABLE_NAME
+#@get TableName
+IF OBJECT_ID('${TableName}', 'U') IS NOT NULL
+  DROP TABLE [${TableName}]
 
-CREATE TABLE TABLE_NAME
+CREATE TABLE [${TableName}]
 (
-	TABLE_NAMEId INT IDENTITY NOT NULL, 
-    CONSTRAINT PK_TABLE_NAMEId PRIMARY KEY (TABLE_NAMEId)
+	${TableName}Id INT IDENTITY NOT NULL, 
+    CONSTRAINT PK_${TableName}Id PRIMARY KEY (${TableName}Id)
 )
